// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test a double click edit of the Label control 1`] = `
<Label
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={true}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onUpdate={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text="A"
  theme={Object {}}
  useedit={false}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <styled.span
      className="ui-label"
      contentEditable={false}
      disabled={false}
      innerRef={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      style={Object {}}
      suppressContentEditableWarning={true}
      visible={true}
    >
      <span
        className="ui-label sc-bdVaJa iXDktG"
        contentEditable={false}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        A
      </span>
    </styled.span>
  </ThemeProvider>
</Label>
`;

exports[`Test creation of a Label control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <styled.span
    className="ui-label test-class"
    contentEditable={false}
    disabled={false}
    innerRef={[Function]}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    style={Object {}}
    suppressContentEditableWarning={true}
    visible={true}
  >
    Test label text
  </styled.span>
</ThemeProvider>
`;

exports[`Test double click change to Label and blur to save 1`] = `
<Label
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={true}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onUpdate={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text="A"
  theme={Object {}}
  useedit={false}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <styled.span
      className="ui-label"
      contentEditable={false}
      disabled={false}
      innerRef={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      style={Object {}}
      suppressContentEditableWarning={true}
      visible={true}
    >
      <span
        className="ui-label sc-bdVaJa iXDktG"
        contentEditable={false}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        A
      </span>
    </styled.span>
  </ThemeProvider>
</Label>
`;

exports[`Test making the Label control invisible 1`] = `
<Label
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onUpdate={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text="Test label text"
  theme={Object {}}
  useedit={false}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <styled.span
      className="ui-label"
      contentEditable={false}
      disabled={false}
      innerRef={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      style={Object {}}
      suppressContentEditableWarning={true}
      visible={false}
    >
      <span
        className="ui-label sc-bdVaJa jiWYIE"
        contentEditable={false}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </styled.span>
  </ThemeProvider>
</Label>
`;

exports[`Test retrieval of default Label props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onUpdate": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "text": "​",
  "theme": Object {},
  "useedit": false,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of the Label control 1`] = `
<Label
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onUpdate={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text="Test label text"
  theme={Object {}}
  useedit={false}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <styled.span
      className="ui-label"
      contentEditable={false}
      disabled={true}
      innerRef={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      style={Object {}}
      suppressContentEditableWarning={true}
      visible={true}
    >
      <span
        className="ui-label sc-bdVaJa hvSzpL"
        contentEditable={false}
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </styled.span>
  </ThemeProvider>
</Label>
`;
